--- a/package.json
+++ b/package.json
@@ -8,18 +8,24 @@
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.0",
-        "@ton/blueprint": "^0.22.0",
-        "@ton/core": "~0",
+        "@orbs-network/ton-access": "^2.3.3",
+        "@ton/blueprint": "^0.24.0",
+        "@ton/core": "^0.58.1",
         "@ton/crypto": "^3.2.0",
-        "@ton/sandbox": "^0.20.0",
+        "@ton/sandbox": "^0.21.0",
         "@ton/test-utils": "^0.4.2",
-        "@ton/ton": "^13.11.2",
+        "@ton/ton": "^15.0.0",
         "@types/jest": "^29.5.12",
-        "@types/node": "^20.14.10",
+        "@types/node": "^22.5.5",
+        "husky": "^9.1.6",
         "jest": "^29.7.0",
         "prettier": "^3.3.2",
         "ts-jest": "^29.2.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.5.3"
+    },
+    "dependencies": {
+        "@tact-lang/compiler": "^1.5.0",
+        "@tact-lang/deployer": "^0.2.0"
     }
 }
