--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "typescript": "^5.5.3"
     },
     "dependencies": {
+        "@aws-crypto/sha256-js": "^5.2.0",
         "@tact-lang/compiler": "^1.5.0",
         "@tact-lang/deployer": "^0.2.0"
     }
